--- a/kaggle/Expedia/src/evaluation.ipynb
+++ b/kaggle/Expedia/src/evaluation.ipynb
@@ -27,225 +27,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date_time</th>\n",
-       "      <th>site_name</th>\n",
-       "      <th>posa_continent</th>\n",
-       "      <th>user_location_country</th>\n",
-       "      <th>user_location_region</th>\n",
-       "      <th>user_location_city</th>\n",
-       "      <th>orig_destination_distance</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>is_mobile</th>\n",
-       "      <th>is_package</th>\n",
-       "      <th>...</th>\n",
-       "      <th>srch_children_cnt</th>\n",
-       "      <th>srch_rm_cnt</th>\n",
-       "      <th>srch_destination_id</th>\n",
-       "      <th>srch_destination_type_id</th>\n",
-       "      <th>is_booking</th>\n",
-       "      <th>cnt</th>\n",
-       "      <th>hotel_continent</th>\n",
-       "      <th>hotel_country</th>\n",
-       "      <th>hotel_market</th>\n",
-       "      <th>hotel_cluster</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2014-08-11 07:46:59</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>66</td>\n",
-       "      <td>348</td>\n",
-       "      <td>48862</td>\n",
-       "      <td>2234.2641</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8250</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>50</td>\n",
-       "      <td>628</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2014-08-11 08:22:12</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>66</td>\n",
-       "      <td>348</td>\n",
-       "      <td>48862</td>\n",
-       "      <td>2234.2641</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8250</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>50</td>\n",
-       "      <td>628</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2014-08-11 08:24:33</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>66</td>\n",
-       "      <td>348</td>\n",
-       "      <td>48862</td>\n",
-       "      <td>2234.2641</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8250</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>50</td>\n",
-       "      <td>628</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2014-08-09 18:05:16</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>66</td>\n",
-       "      <td>442</td>\n",
-       "      <td>35390</td>\n",
-       "      <td>913.1932</td>\n",
-       "      <td>93</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14984</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>50</td>\n",
-       "      <td>1457</td>\n",
-       "      <td>80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2014-08-09 18:08:18</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>66</td>\n",
-       "      <td>442</td>\n",
-       "      <td>35390</td>\n",
-       "      <td>913.6259</td>\n",
-       "      <td>93</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14984</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>50</td>\n",
-       "      <td>1457</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             date_time  site_name  posa_continent  user_location_country  \\\n",
-       "0  2014-08-11 07:46:59          2               3                     66   \n",
-       "1  2014-08-11 08:22:12          2               3                     66   \n",
-       "2  2014-08-11 08:24:33          2               3                     66   \n",
-       "3  2014-08-09 18:05:16          2               3                     66   \n",
-       "4  2014-08-09 18:08:18          2               3                     66   \n",
-       "\n",
-       "   user_location_region  user_location_city  orig_destination_distance  \\\n",
-       "0                   348               48862                  2234.2641   \n",
-       "1                   348               48862                  2234.2641   \n",
-       "2                   348               48862                  2234.2641   \n",
-       "3                   442               35390                   913.1932   \n",
-       "4                   442               35390                   913.6259   \n",
-       "\n",
-       "   user_id  is_mobile  is_package      ...        srch_children_cnt  \\\n",
-       "0       12          0           1      ...                        0   \n",
-       "1       12          0           1      ...                        0   \n",
-       "2       12          0           0      ...                        0   \n",
-       "3       93          0           0      ...                        0   \n",
-       "4       93          0           0      ...                        0   \n",
-       "\n",
-       "  srch_rm_cnt srch_destination_id  srch_destination_type_id  is_booking  cnt  \\\n",
-       "0           1                8250                         1           0    3   \n",
-       "1           1                8250                         1           1    1   \n",
-       "2           1                8250                         1           0    1   \n",
-       "3           1               14984                         1           0    1   \n",
-       "4           1               14984                         1           0    1   \n",
-       "\n",
-       "   hotel_continent  hotel_country  hotel_market  hotel_cluster  \n",
-       "0                2             50           628              1  \n",
-       "1                2             50           628              1  \n",
-       "2                2             50           628              1  \n",
-       "3                2             50          1457             80  \n",
-       "4                2             50          1457             21  \n",
-       "\n",
-       "[5 rows x 24 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_train.head()"
+    "import datetime\n",
+    "from heapq import nlargest\n",
+    "from operator import itemgetter\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "# validation ###############\n",
+    "validate = 0  # 1 - validation, 0 - submission\n",
+    "N0 = 10       # total number of parts\n",
+    "N1 = 2        # number of part\n",
+    "#--------------------------\n",
+    "\n",
+    "def run_solution():\n",
+    "    print('Preparing arrays...')\n",
+    "    f = open(\"/home/ubuntu/kaggle/Expedia/input/train.csv\", \"r\")\n",
+    "    f.readline()\n",
+    "    best_hotels_od_ulc = defaultdict(lambda: defaultdict(int))\n",
+    "    best_hotels_search_dest = defaultdict(lambda: defaultdict(int))\n",
+    "    best_hotels_search_dest1 = defaultdict(lambda: defaultdict(int))\n",
+    "    best_hotel_country = defaultdict(lambda: defaultdict(int))\n",
+    "    hits = defaultdict(int)\n",
+    "    tp = defaultdict(float)\n",
+    "\n",
+    "    popular_hotel_cluster = defaultdict(int)\n",
+    "    total = 0\n",
+    "\n",
+    "    # Calc counts\n",
+    "    while 1:\n",
+    "        line = f.readline().strip()\n",
+    "        total += 1\n",
+    "        if total % 10000000 == 0:\n",
+    "            print('Read {} lines...'.format(total))\n",
+    "        if line == '':\n",
+    "            break\n",
+    "        arr = line.split(\",\")\n",
+    "        book_year = int(arr[0][:4])\n",
+    "        book_month = int(arr[0][5:7])\n",
+    "        user_location_city = arr[5]\n",
+    "        orig_destination_distance = arr[6]\n",
+    "        user_id = int(arr[7])\n",
+    "        is_package = int(arr[9])\n",
+    "        srch_destination_id = arr[16]\n",
+    "        is_booking = int(arr[18])\n",
+    "        hotel_country = arr[21]\n",
+    "        hotel_market = arr[22]\n",
+    "        hotel_cluster = arr[23]\n",
+    "\n",
+    "        if validate == 1 and user_id % N0 == N1:\n",
+    "            continue\n",
+    "\n",
+    "        append_0 = ((book_year - 2012)*12 + (book_month - 12)) * ((book_year - 2012)*12 + (book_month - 12))\n",
+    "        append_1 = append_0 *  (3 + 12*is_booking)\n",
+    "        append_2 = 3 + 5.1*is_booking\n",
+    "\n",
+    "        if user_location_city != '' and orig_destination_distance != '':\n",
+    "            best_hotels_od_ulc[(user_location_city, orig_destination_distance)][hotel_cluster] += append_0\n",
+    "\n",
+    "        if srch_destination_id != '' and hotel_country != '' and hotel_market != '' and book_year != '':\n",
+    "            best_hotels_search_dest[(srch_destination_id, hotel_country, hotel_market,is_package)][hotel_cluster] += append_1\n",
+    "\n",
+    "        if srch_destination_id != '':\n",
+    "            best_hotels_search_dest1[srch_destination_id][hotel_cluster] += append_1\n",
+    "\n",
+    "        if hotel_country != '':\n",
+    "            best_hotel_country[hotel_country][hotel_cluster] += append_2\n",
+    "\n",
+    "        popular_hotel_cluster[hotel_cluster] += append_0\n",
+    "\n",
+    "    f.close()\n",
+    "\n",
+    "###########################\n",
+    "    if validate == 1:\n",
+    "        print('Validation...')\n",
+    "        f = open(\"/home/ubuntu/kaggle/Expedia/input/train.csv\", \"r\")\n",
+    "    else:\n",
+    "        print('Generate submission...')\n",
+    "        f = open(\"/home/ubuntu/kaggle/Expedia/input/test.csv\", \"r\")\n",
+    "    now = datetime.datetime.now()\n",
+    "    path = 'submission_' + str(now.strftime(\"%Y-%m-%d-%H-%M\")) + '.csv'\n",
+    "    out = open(path, \"w\")\n",
+    "    f.readline()\n",
+    "    total = 0\n",
+    "    totalv = 0\n",
+    "    out.write(\"id,hotel_cluster\\n\")\n",
+    "    topclasters = nlargest(5, sorted(popular_hotel_cluster.items()), key=itemgetter(1))\n",
+    "\n",
+    "    while 1:\n",
+    "        line = f.readline().strip()\n",
+    "        total += 1\n",
+    "        if total % 1000000 == 0:\n",
+    "            print('Write {} lines...'.format(total))\n",
+    "\n",
+    "        if line == '':\n",
+    "            break\n",
+    "\n",
+    "        arr = line.split(\",\")\n",
+    "        if validate == 1:\n",
+    "            book_year = int(arr[0][:4])\n",
+    "            book_month = int(arr[0][5:7])\n",
+    "            user_location_city = arr[5]\n",
+    "            orig_destination_distance = arr[6]\n",
+    "            user_id = int(arr[7])\n",
+    "            is_package = int(arr[9])\n",
+    "            srch_destination_id = arr[16]\n",
+    "            is_booking = int(arr[18])\n",
+    "            hotel_country = arr[21]\n",
+    "            hotel_market = arr[22]\n",
+    "            hotel_cluster = arr[23]\n",
+    "            id = 0\n",
+    "            if user_id % N0 != N1:\n",
+    "               continue\n",
+    "            if is_booking == 0:\n",
+    "               continue\n",
+    "        else:\n",
+    "            id = arr[0]\n",
+    "            user_location_city = arr[6]\n",
+    "            orig_destination_distance = arr[7]\n",
+    "            user_id = int(arr[8])\n",
+    "            is_package = int(arr[10])\n",
+    "            srch_destination_id = arr[17]\n",
+    "            hotel_country = arr[20]\n",
+    "            hotel_market = arr[21]\n",
+    "            is_booking = 1\n",
+    "\n",
+    "        totalv += 1\n",
+    "        out.write(str(id) + ',')\n",
+    "        filled = []\n",
+    "\n",
+    "        s1 = (user_location_city, orig_destination_distance)\n",
+    "        if s1 in best_hotels_od_ulc:\n",
+    "            d = best_hotels_od_ulc[s1]\n",
+    "            topitems = nlargest(5, sorted(d.items()), key=itemgetter(1))\n",
+    "            for i in range(len(topitems)):\n",
+    "                if len(filled) == 5:\n",
+    "                    break\n",
+    "                if topitems[i][0] in filled:\n",
+    "                    continue\n",
+    "                out.write(' ' + topitems[i][0])\n",
+    "                filled.append(topitems[i][0])\n",
+    "                if validate == 1:\n",
+    "                   if topitems[i][0]==hotel_cluster:\n",
+    "                      hits[len(filled)] +=1\n",
+    "\n",
+    "        s2 = (srch_destination_id, hotel_country, hotel_market,is_package)\n",
+    "        if s2 in best_hotels_search_dest:\n",
+    "            d = best_hotels_search_dest[s2]\n",
+    "            topitems = nlargest(5, d.items(), key=itemgetter(1))\n",
+    "            for i in range(len(topitems)):\n",
+    "                if len(filled) == 5:\n",
+    "                    break\n",
+    "                if topitems[i][0] in filled:\n",
+    "                    continue\n",
+    "                out.write(' ' + topitems[i][0])\n",
+    "                filled.append(topitems[i][0])\n",
+    "                if validate == 1:\n",
+    "                   if topitems[i][0]==hotel_cluster:\n",
+    "                      hits[len(filled)] +=1\n",
+    "        elif srch_destination_id in best_hotels_search_dest1:\n",
+    "            d = best_hotels_search_dest1[srch_destination_id]\n",
+    "            topitems = nlargest(5, d.items(), key=itemgetter(1))\n",
+    "            for i in range(len(topitems)):\n",
+    "                if len(filled) == 5:\n",
+    "                    break\n",
+    "                if topitems[i][0] in filled:\n",
+    "                    continue\n",
+    "                out.write(' ' + topitems[i][0])\n",
+    "                filled.append(topitems[i][0])\n",
+    "                if validate == 1:\n",
+    "                   if topitems[i][0]==hotel_cluster:\n",
+    "                      hits[len(filled)] +=1\n",
+    "\n",
+    "\n",
+    "        if hotel_country in best_hotel_country:\n",
+    "            d = best_hotel_country[hotel_country]\n",
+    "            topitems = nlargest(5, d.items(), key=itemgetter(1))\n",
+    "            for i in range(len(topitems)):\n",
+    "                if len(filled) == 5:\n",
+    "                    break\n",
+    "                if topitems[i][0] in filled:\n",
+    "                    continue\n",
+    "                out.write(' ' + topitems[i][0])\n",
+    "                filled.append(topitems[i][0])\n",
+    "                if validate == 1:\n",
+    "                   if topitems[i][0]==hotel_cluster:\n",
+    "                      hits[len(filled)] +=1\n",
+    "\n",
+    "\n",
+    "        for i in range(len(topclasters)):\n",
+    "            if len(filled) == 5:\n",
+    "                    break\n",
+    "            if topclasters[i][0] in filled:\n",
+    "                continue\n",
+    "            out.write(' ' + topclasters[i][0])\n",
+    "            filled.append(topclasters[i][0])\n",
+    "            if validate == 1:\n",
+    "                if topclasters[i][0]==hotel_cluster:\n",
+    "                    hits[len(filled)] +=1\n",
+    "\n",
+    "        out.write(\"\\n\")\n",
+    "    out.close()\n",
+    "    print('Completed!')\n",
+    "    # validation >>>\n",
+    "    scores = 0.0\n",
+    "    classified = 0\n",
+    "    if validate == 1:\n",
+    "        for jj in range(1,6):\n",
+    "           scores +=  hits[jj]*1.0/jj\n",
+    "           tp[jj] = hits[jj]*100.0/totalv\n",
+    "           classified += hits[jj]\n",
+    "        misclassified = totalv-classified\n",
+    "        miscp = misclassified*100.0/totalv\n",
+    "        print(\"\")\n",
+    "        print(\" validation\")\n",
+    "        print(\"----------------------------------------------------------------\")\n",
+    "        print(\"position %8d %8d %8d %8d %8d %8d+\" % (1,2,3,4,5,6))\n",
+    "        print(\"hits     %8d %8d %8d %8d %8d %8d \" % (hits[1],hits[2],hits[3],hits[4],hits[5],misclassified))\n",
+    "        print(\"hits[%%]  %8.2f %8.2f %8.2f %8.2f %8.2f %8.2f \" % (tp[1],tp[2],tp[3],tp[4],tp[5],miscp))\n",
+    "        print(\"----------------------------------------------------------------\")\n",
+    "        print(\"MAP@5 = %8.4f \" % (scores*1.0/totalv))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df_trsample = df_train.sample(n=50000,  random_state= 112)"
+    "run_solution()"
    ]
   },
   {
@@ -258,15 +274,6 @@
    "source": [
     "df_trsample.to_csv('train_sample_10000.csv', index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
