csv to bin files

--- a/kaggle/FacebookV/src/ZFTurbo.ipynb
+++ b/kaggle/FacebookV/src/ZFTurbo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -77,20 +77,22 @@
    "source": [
     "def run_solution():\n",
     "    print('Preparing arrays...')\n",
-    "    f = open(\"/home/ubuntu/kaggle/Facebook/input/train.csv\", \"r\")\n",
+    "    f = open(\"../input/train.csv\", \"r\")\n",
     "    f.readline()\n",
     "    total = 0\n",
-    "    grid_size_x = 500\n",
+    "    grid_size_x = 600\n",
     "    grid_size_y = 1000\n",
     "    grid_size_x2 = 100\n",
     "    grid_size_y2 = 200\n",
     "    # Maximum T = 786239. Take -10% of it\n",
     "    split_t = 707616\n",
+    "    split_test_out_of_business = 684028 #628991\n",
     "    test_arr = []\n",
     "\n",
     "    grid = defaultdict(lambda: defaultdict(int))\n",
     "    grid_valid = defaultdict(lambda: defaultdict(int))\n",
-    "    grid_last10pct = dict()\n",
+    "    last10pct = dict()\n",
+    "    test_out_of_business = dict()\n",
     "    grid_sorted = dict()\n",
     "    grid_sorted_valid = dict()\n",
     "\n",
@@ -112,6 +114,7 @@
     "        time1 = int(arr[4])\n",
     "        place_id = arr[5]\n",
     "        quarter_period_of_day = math.floor((time1 + 120) / (6*60)) % 4\n",
+    "        time_of_day = math.log10((time1 + 120.0) / (60 * 24 * 30))\n",
     "        #day_of_week = math.floor((time1 % 10080) / 1440) \n",
     "        #if (day_of_week == 0 or day_of_week == 1):\n",
     "        #    weekend = 1\n",
@@ -120,20 +123,22 @@
     "        #hour_of_day = math.floor(time_of_week / 60) % 24\n",
     "\n",
     "        ix, iy = prep_xy(x, y, grid_size_x, grid_size_y)\n",
-    "        ix2, iy2 = prep_xy(x, y, grid_size_x2, grid_size_y2)\n",
+    "        # ix2, iy2 = prep_xy(x, y, grid_size_x2, grid_size_y2)\n",
     "        #grid[(ix, iy, quarter_period_of_day, weekend)][place_id] += 1\n",
-    "        grid[(ix, iy, quarter_period_of_day)][place_id] += 1\n",
-    "        grid[(ix, iy)][place_id] += 1\n",
-    "        grid[((ix2+10000), (iy2+10000))][place_id] += 1\n",
+    "        grid[(ix, iy, quarter_period_of_day)][place_id] += (1) * time_of_day \n",
+    "        grid[(ix, iy)][place_id] += 1 * time_of_day\n",
+    "        # grid[((ix2+10000), (iy2+10000))][place_id] += 1 * time_of_day\n",
     "        \n",
     "        if time1 < split_t:\n",
     "            #grid_valid[(ix, iy, quarter_period_of_day,weekend)][place_id] += 1\n",
-    "            grid_valid[(ix, iy, quarter_period_of_day)][place_id] += 1\n",
-    "            grid_valid[(ix, iy)][place_id] += 1\n",
-    "            grid_valid[((ix2+10000), (iy2+10000))][place_id] += 1\n",
+    "            grid_valid[(ix, iy, quarter_period_of_day)][place_id] += 1 * (time_of_day)\n",
+    "            grid_valid[(ix, iy)][place_id] += 1 * (time_of_day)\n",
+    "            # grid_valid[((ix2+10000), (iy2+10000))][place_id] += 1 * (time_of_day)\n",
     "            train_samples += 1\n",
+    "            if time1 >= split_test_out_of_business:\n",
+    "                test_out_of_business[place_id] = 1\n",
     "        else:\n",
-    "            grid_last10pct[place_id] = 1\n",
+    "            last10pct[place_id] = 1\n",
     "            test_arr.append(arr)\n",
     "            test_samples += 1\n",
     "\n",
@@ -173,7 +178,7 @@
     "        #s0 = (ix, iy, quarter_period_of_day, weekend)\n",
     "        s1 = (ix, iy, quarter_period_of_day)\n",
     "        s2 = (ix, iy)\n",
-    "        s3 = ((ix2+10000), (iy2+10000))\n",
+    "        # s3 = ((ix2+10000), (iy2+10000))\n",
     "        #if s0 in grid_sorted_valid:\n",
     "        #    topitems = grid_sorted_valid[s0]\n",
     "        #    for i in range(len(topitems)):\n",
@@ -182,6 +187,33 @@
     "        #        if len(filled) == 3:\n",
     "        #            break\n",
     "        #        filled.append(topitems[i][0])\n",
+    "        if len(filled) < 3 and s1 in grid_sorted_valid:\n",
+    "            topitems = grid_sorted_valid[s1]\n",
+    "            for i in range(len(topitems)):\n",
+    "                if topitems[i][0] in filled:\n",
+    "                    continue\n",
+    "                if len(filled) == 3:\n",
+    "                    break\n",
+    "                if topitems[i][0] in test_out_of_business:\n",
+    "                    filled.append(topitems[i][0])\n",
+    "        if len(filled) < 3 and s2 in grid_sorted_valid:\n",
+    "            topitems = grid_sorted_valid[s2]\n",
+    "            for i in range(len(topitems)):\n",
+    "                if topitems[i][0] in filled:\n",
+    "                    continue\n",
+    "                if len(filled) == 3:\n",
+    "                    break\n",
+    "                if topitems[i][0] in test_out_of_business:\n",
+    "                    filled.append(topitems[i][0])\n",
+    "        # if len(filled) < 3 and s3 in grid_sorted_valid:\n",
+    "            # topitems = grid_sorted_valid[s3]\n",
+    "            # for i in range(len(topitems)):\n",
+    "                # if topitems[i][0] in filled:\n",
+    "                    # continue\n",
+    "                # if len(filled) == 3:\n",
+    "                    # break\n",
+    "                # if topitems[i][0] in test_out_of_business:\n",
+    "                    # filled.append(topitems[i][0])\n",
     "        if len(filled) < 3 and s1 in grid_sorted_valid:\n",
     "            topitems = grid_sorted_valid[s1]\n",
     "            for i in range(len(topitems)):\n",
@@ -198,14 +230,14 @@
     "                if len(filled) == 3:\n",
     "                    break\n",
     "                filled.append(topitems[i][0])\n",
-    "        if len(filled) < 3 and s3 in grid_sorted_valid:\n",
-    "            topitems = grid_sorted_valid[s3]\n",
-    "            for i in range(len(topitems)):\n",
-    "                if topitems[i][0] in filled:\n",
-    "                    continue\n",
-    "                if len(filled) == 3:\n",
-    "                    break\n",
-    "                filled.append(topitems[i][0])\n",
+    "        # if len(filled) < 3 and s3 in grid_sorted_valid:\n",
+    "            # topitems = grid_sorted_valid[s3]\n",
+    "            # for i in range(len(topitems)):\n",
+    "                # if topitems[i][0] in filled:\n",
+    "                    # continue\n",
+    "                # if len(filled) == 3:\n",
+    "                    # break\n",
+    "                # filled.append(topitems[i][0])\n",
     "\n",
     "        score += apk([place_id], filled, 3)\n",
     "        score_num += 1\n",
@@ -219,7 +251,7 @@
     "    print('Generate submission...')\n",
     "    sub_file = os.path.join('submission_' + str(datetime.datetime.now().strftime(\"%Y-%m-%d-%H-%M\")) + '.csv')\n",
     "    out = open(sub_file, \"w\")\n",
-    "    f = open(\"/home/ubuntu/kaggle/Facebook/input/test.csv\", \"r\")\n",
+    "    f = open(\"../input/test.csv\", \"r\")\n",
     "    f.readline()\n",
     "    total = 0\n",
     "    count_empty0 = 0\n",
@@ -255,7 +287,7 @@
     "        #s0 = (ix, iy, quarter_period_of_day, weekend)\n",
     "        s1 = (ix, iy, quarter_period_of_day)\n",
     "        s2 = (ix, iy)\n",
-    "        s3 = ((ix2+10000), (iy2+10000))\n",
+    "        # s3 = ((ix2+10000), (iy2+10000))\n",
     "        #if s0 in grid_sorted:\n",
     "        #    topitems = grid_sorted[s0]\n",
     "        #    for i in range(len(topitems)):\n",
@@ -272,7 +304,7 @@
     "                    continue\n",
     "                if len(filled) == 3:\n",
     "                    break\n",
-    "                if topitems[i][0] in grid_last10pct:\n",
+    "                if topitems[i][0] in last10pct:\n",
     "                    out.write(' ' + topitems[i][0])\n",
     "                    filled.append(topitems[i][0])\n",
     "        if len(filled) < 3 and s2 in grid_sorted:\n",
@@ -282,19 +314,19 @@
     "                    continue\n",
     "                if len(filled) == 3:\n",
     "                    break\n",
-    "                if topitems[i][0] in grid_last10pct:\n",
+    "                if topitems[i][0] in last10pct:\n",
     "                    out.write(' ' + topitems[i][0])\n",
     "                    filled.append(topitems[i][0])\n",
-    "        if len(filled) < 3 and s3 in grid_sorted_valid:\n",
-    "            topitems = grid_sorted_valid[s3]\n",
-    "            for i in range(len(topitems)):\n",
-    "                if topitems[i][0] in filled:\n",
-    "                    continue\n",
-    "                if len(filled) == 3:\n",
-    "                    break\n",
-    "                if topitems[i][0] in grid_last10pct:\n",
-    "                    out.write(' ' + topitems[i][0])\n",
-    "                    filled.append(topitems[i][0])\n",
+    "        # if len(filled) < 3 and s3 in grid_sorted_valid:\n",
+    "            # topitems = grid_sorted_valid[s3]\n",
+    "            # for i in range(len(topitems)):\n",
+    "                # if topitems[i][0] in filled:\n",
+    "                    # continue\n",
+    "                # if len(filled) == 3:\n",
+    "                    # break\n",
+    "                # if topitems[i][0] in last10pct:\n",
+    "                    # out.write(' ' + topitems[i][0])\n",
+    "                    # filled.append(topitems[i][0])\n",
     "        if len(filled) < 3 and s1 in grid_sorted:\n",
     "            topitems = grid_sorted[s1]\n",
     "            for i in range(len(topitems)):\n",
@@ -313,15 +345,15 @@
     "                    break\n",
     "                out.write(' ' + topitems[i][0])\n",
     "                filled.append(topitems[i][0])\n",
-    "        if len(filled) < 3 and s3 in grid_sorted_valid:\n",
-    "            topitems = grid_sorted_valid[s3]\n",
-    "            for i in range(len(topitems)):\n",
-    "                if topitems[i][0] in filled:\n",
-    "                    continue\n",
-    "                if len(filled) == 3:\n",
-    "                    break\n",
-    "                out.write(' ' + topitems[i][0])\n",
-    "                filled.append(topitems[i][0])\n",
+    "        # if len(filled) < 3 and s3 in grid_sorted_valid:\n",
+    "            # topitems = grid_sorted_valid[s3]\n",
+    "            # for i in range(len(topitems)):\n",
+    "                # if topitems[i][0] in filled:\n",
+    "                    # continue\n",
+    "                # if len(filled) == 3:\n",
+    "                    # break\n",
+    "                # out.write(' ' + topitems[i][0])\n",
+    "                # filled.append(topitems[i][0])\n",
     "        \n",
     "        if len(filled) == 0:\n",
     "            count_empty0 += 1\n",
@@ -340,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -352,14 +384,22 @@
       "Preparing arrays...\n",
       "Sorting arrays...\n",
       "Run validation...\n",
-      "Predicted score: 0.460772216847\n",
+      "Predicted score: 0.460124480792\n",
       "('Train samples: ', 25573110)\n",
       "('Test samples: ', 3544911)\n",
-      "Generate submission...\n",
-      "('Empty0 cases:', '0')\n",
-      "('Empty1 cases:', '0')\n",
-      "('Empty2 cases:', '0')\n",
-      "Elapsed time overall: 915.40690589 seconds\n"
+      "Generate submission...\n"
+     ]
+    },
+    {
+     "ename": "IOError",
+     "evalue": "[Errno 28] No space left on device",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-5e701b7bb826>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mstart_time\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mrun_solution\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Elapsed time overall: %s seconds\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mstart_time\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-11-ea6f0f087a55>\u001b[0m in \u001b[0;36mrun_solution\u001b[1;34m()\u001b[0m\n\u001b[0;32m    229\u001b[0m                     \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    230\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mtopitems\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlast10pct\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 231\u001b[1;33m                     \u001b[0mout\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m' '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mtopitems\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    232\u001b[0m                     \u001b[0mfilled\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtopitems\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    233\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilled\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m3\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0ms2\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mgrid_sorted\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIOError\u001b[0m: [Errno 28] No space left on device"
      ]
     }
    ],
