--- a/Udacity/customer_segments/customer_segments.ipynb
+++ b/Udacity/customer_segments/customer_segments.ipynb
@@ -22,19 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/zhonglin/anaconda/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -150,16 +142,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  8.64539685e-07   1.43361951e-07  -7.76718913e-07  -1.11467757e-05\n",
+      "    5.49838859e-07   5.95319889e-06]\n",
+      " [ -2.89765866e-07   2.50260672e-06   1.17412423e-05  -1.48158769e-06\n",
+      "   -2.81040908e-05  -5.75344845e-06]\n",
+      " [ -3.86623404e-07  -2.17172964e-07  -6.04806188e-07  -5.20074394e-07\n",
+      "    5.25895074e-07   1.80909549e-05]\n",
+      " [  3.97691411e-06  -8.73068128e-07  -6.72342461e-07  -6.72888848e-07\n",
+      "    2.17198358e-06  -1.01328618e-06]\n",
+      " [  1.61215930e-07   9.80110659e-06  -5.92978457e-06  -3.40688806e-07\n",
+      "    3.68798738e-06  -5.99991863e-06]\n",
+      " [ -2.02212135e-07   1.86046436e-06  -6.88422820e-06  -3.53219838e-07\n",
+      "    1.82695509e-06   1.63185711e-06]]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Fit an ICA model to the data\n",
     "# Note: Adjust the data to have center at the origin first!\n",
     "from sklearn.decomposition import FastICA\n",
-    "ica = ?\n",
+    "ica = FastICA(n_components = 6)\n",
+    "ica.fit(data)\n",
     "\n",
     "# Print the independent components\n",
     "print ica.components_"
@@ -215,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
